--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active-link" style="color: white;">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link " style="color: white;">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link" style="color: white;">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link" style="color: white;">Work</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link" style="color: white;">Contact</a></li>
+                        <li class="nav__item"><a href="#work" class="nav__link" style="color: white;">Achivements</a></li>
                     </ul>
                 </div>
 
@@ -58,7 +57,7 @@
                             </mask>
                             <g mask="url(#mask0)">
                                 <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                                <image class="home__blob-img" x="50" y="60" href="assets/img/perfil.png"/>
+                                <image class="home__blob-img" x="0" y="-225" href="assets/img/perfil.jpg"/>
                             </g>
                         </svg>
                     </div>
@@ -70,8 +69,14 @@
                 <h2 class="section-title">About</h2>
 
                 <div class="about__container bd-grid">
-                    <div class="about__img">
-                        <img src="assets/img/about.jpg" alt="">
+                    <div class="about__container bd-grid" style="width: 90%;">
+                        <div class="about__img">
+                            <img src="assets/img/Kid.jpg">
+                            <img src="assets/img/Kid3.jpg">
+                        </div>
+                        <div class="about__img">
+                            <img src="assets/img/Kid2.jpg">
+                        </div>
                     </div>
                     
                     <div>
@@ -149,14 +154,14 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                        <img src="assets/img/skills.jpg" alt="" class="skills__img">
                     </div>
                 </div>
             </section>
 
             <!--===== WORK =====-->
             <section class="work section" id="work">
-                <h2 class="section-title">Work</h2>
+                <h2 class="section-title">Achivements</h2>
 
                 <div class="work__container bd-grid">
                     <a class="work__img">
@@ -178,20 +183,13 @@
                         <img src="assets/img/work6.jpg" alt="">
                     </a>
                 </div>
-            </section>
-
-            <!--===== CONTACT =====-->
-            <section class="contact section" id="contact">
-                <h2 class="section-title">Contact</h2>
-
-                <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Enviar" class="contact__button button">
-                    </form>
-                </div>
+                <nav class="nav bd-grid">
+                    <a></a>
+                    </a>
+                    <div class="home__data">
+                        <a href="achivement.html" class="button">MORE>></a>
+                    </div>
+                </nav>
             </section>
         </main>
 
