--- a/achivement.html
+++ b/achivement.html
@@ -85,6 +85,18 @@
                         <img src="assets/img/Stem2.jpg">
                     </a>
                 </div>
+                <div class="about__container bd-grid">
+                    <div>
+                        <h2 class="about__subtitle">TMC</h2>
+                        <p class="about__text">
+                            I got bronze award from TMC(Thailand Mathematics contest), which reflex my mathematical skills. In addition, this help me to indicate what topic 
+                            I'm missing on
+                        </p>           
+                    </div>  
+                    <a class="work__img">
+                        <img src="assets/img/TMC.jpg">
+                    </a>
+                </div>
             </section>
             <section class="work section" id="volunteer">
                 <h2 class="section-title">Volunteer</h2>
