--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
+        </script>
         <title>Portfolio</title>
     </head>
     <body style="background-color: #262626;">
@@ -24,6 +25,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active-link" style="color: white;">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link " style="color: white;">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link" style="color: white;">Skills</a></li>
+                        <li class="nav__item"><a href="#score" class="nav__link" style="color: white;">Scores</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link" style="color: white;">Achivements</a></li>
                     </ul>
                 </div>
@@ -159,6 +161,62 @@
                 </div>
             </section>
 
+            <!--===== Score =====-->
+            <section class="score section" id="score">
+                <h2 class="section-title">Scores</h2>
+
+                <div class="skills__container bd-grid">        
+                    <div>              
+                        <img src="assets/img/Writing.webp" alt="" class="skills__img">
+                    </div>  
+                    <div>
+                        <!-- <h2 class="skills__subtitle">List of Skills</h2>
+                        <p class="skills__text">Through out my life I've acquired some skills, which are essensial for engineering and programming.</p> -->
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='tabler--math-symbols skills__icon'></i>
+                                <span class="skills__name">SAT-MATH</span>
+                            </div>
+                            <div class="skills__bar scores_sat_m">
+
+                            </div>
+                            <div>
+                                <span class="skills__percentage">790</span>
+                            </div>
+                        </div>
+                        <div class="skills__data" style="height: 48px;">
+                            <div class="skills__names">
+                                <span class="material-symbols-outlined skills__icon" style="font-size: 40px;">abc</span>
+                                <span class="skills__name" style="left: -8px; position: relative;">SAT-ENG</span>
+                            </div>
+                            <div class="skills__bar scores_sat_e">
+                                
+                            </div>
+                            <div>
+                                <span class="skills__percentage">480</span>
+                            </div>
+                        </div>
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <svg width="50" height="30" xmlns="http://www.w3.org/2000/svg">
+                                    <g fill-rule="evenodd" clip-rule="evenodd" transform="matrix(0.15, 0, 0, 0.2, 0, -8)">
+                                        <path d="M 8.504 67.009 L 229.658 67.009 L 229.658 140.924 L 8.504 140.924 L 8.504 67.009 Z" style="fill: rgb(0, 98, 255);"/>
+                                        <path d="M 44.287 124.792 L 44.287 78.449 L 34.315 78.449 L 34.315 124.792 L 44.287 124.792 Z M 65.112 97.513 L 65.112 84.902 L 87.404 84.902 L 87.404 78.449 L 55.14 78.449 L 55.14 124.792 L 87.989 124.792 L 87.989 118.044 L 65.112 118.044 L 65.112 104.259 L 81.537 104.259 L 81.537 97.513 L 65.112 97.513 Z M 129.933 118.044 L 106.468 118.044 L 106.468 78.449 L 96.496 78.449 L 96.496 124.792 L 129.933 124.792 L 129.933 118.044 L 129.933 118.044 Z M 168.357 78.449 L 125.241 78.449 L 125.241 84.902 L 141.959 84.902 L 141.959 124.792 L 151.932 124.792 L 151.932 84.902 L 168.357 84.902 L 168.357 78.449 Z M 205.899 88.421 C 204.726 82.262 199.739 77.568 190.353 77.568 C 184.489 77.568 180.382 79.035 177.743 81.381 C 174.808 83.433 173.636 86.366 173.636 89.593 C 173.636 93.992 175.983 96.925 178.035 98.979 C 180.087 100.738 182.729 102.205 187.129 104.258 C 191.234 106.017 192.993 107.192 194.46 108.069 C 196.219 109.245 197.1 110.712 197.1 113.056 C 197.1 114.523 196.515 115.991 195.633 116.87 C 194.46 118.043 192.409 119.214 189.769 119.214 C 185.662 119.214 183.609 116.574 182.435 113.936 L 172.464 114.523 C 173.929 120.977 178.916 125.669 189.769 125.669 C 196.221 125.669 200.328 123.614 203.26 120.976 C 206.194 118.334 207.367 115.11 207.367 111.59 C 207.367 107.776 205.608 104.844 203.26 102.789 C 201.208 101.03 198.861 99.563 194.756 97.804 C 190.649 96.044 188.89 95.163 186.835 93.991 C 184.782 92.818 183.903 91.057 183.903 89.005 C 183.903 87.831 184.195 86.658 185.37 85.779 C 186.543 84.899 188.302 84.311 190.062 84.311 C 193.876 84.311 195.634 86.658 196.516 89.004 L 205.899 88.421 L 205.899 88.421 Z" style="fill: rgb(38, 38, 38);"/>
+                                    </g>
+                                </svg>
+                                <span class="skills__name">IELTS</span>
+                            </div>
+                            <div class="skills__bar scores_ielts">
+                                
+                            </div>
+                            <div>
+                                <span class="skills__percentage">Band 7</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!--===== WORK =====-->
             <section class="work section" id="work">
                 <h2 class="section-title">Achivements</h2>
@@ -204,5 +262,7 @@
 
         <!--===== MAIN JS =====-->
         <script src="assets/js/main.js"></script>
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,200" />
     </body>
 </html>
